Fixed white borders on small resolutions

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 
 /* ---- tsparticles container ---- */
 #tsparticles {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 100%;
   background-color: var(--background-color);
